update global exception handler